Rework of Promise chapter. Study-01 demonstrates recursive loading of document fragments.

--- a/docs/svg-flowchart.css
+++ b/docs/svg-flowchart.css
@@ -27,7 +27,7 @@ path, line {
 text {
 	stroke : none;
 	fill : black;
-	alignment-baseline : middle;
+	alignment-baseline : central;
 	text-anchor : middle ;
 	}
 
